--- a/xml.task/xml.task.csproj
+++ b/xml.task/xml.task.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Commands\Command.cs" />
+    <Compile Include="Model\RastrManager\RastrOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
