--- a/xml.task/xml.task.csproj
+++ b/xml.task/xml.task.csproj
@@ -80,9 +80,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Commands\Command.cs" />
-    <Compile Include="Model\Commands\DynamicFolderCommand.cs" />
-    <Compile Include="Model\Commands\DynamicCommand.cs" />
+    <Compile Include="Model\Commands\FolderCommands\DynamicFolderCommand.cs" />
+    <Compile Include="Model\Commands\SimpleCommands\DynamicCommand.cs" />
     <Compile Include="Model\Commands\FolderCommand.cs" />
+    <Compile Include="Model\Commands\SimpleCommands\WriteCommand.cs" />
     <Compile Include="Model\RastrManager\RastrOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
