--- a/xml.task/xml.task.csproj
+++ b/xml.task/xml.task.csproj
@@ -57,7 +57,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="ExecutingWindow.xaml">
+    <Compile Include="Windows\PlotWindow.xaml.cs">
+      <DependentUpon>PlotWindow.xaml</DependentUpon>
+    </Compile>
+    <Page Include="Windows\ExecutingWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -71,13 +74,17 @@
     </Compile>
     <Compile Include="Model\Calculation.cs" />
     <Compile Include="Model\CommandClient.cs" />
-    <Compile Include="ExecutingWindow.xaml.cs">
+    <Compile Include="Windows\ExecutingWindow.xaml.cs">
       <DependentUpon>ExecutingWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Windows\PlotWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Commands\Command.cs" />
