--- a/xml.task/packages.config
+++ b/xml.task/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AvalonEdit" version="5.0.4" targetFramework="net461" />
+  <package id="OxyPlot.Core" version="2.0.0-unstable1054" targetFramework="net461" />
+  <package id="OxyPlot.Wpf" version="2.0.0-unstable1054" targetFramework="net461" />
 </packages>
